k8s-tutorial/kubernetes-yamls/app-rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-rest
  namespace: app-layer
  labels:
    app: app-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-rest
  template:
    metadata:
      labels:
        app: app-rest
    spec:
      containers:
        - name: app-rest
          image: samplerest:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
