k8s-tutorial/kubernetes-yamls/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service
  namespace: data-layer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-service
  template:
    metadata:
      labels:
        app: db-service
    spec:
      containers:
        - image: mysql:5.6
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
